# ChangeLog for dev-java/java-sdk-docs
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/java-sdk-docs/ChangeLog,v 1.126 2015/04/19 12:11:42 chewi Exp $

  19 Apr 2015; James Le Cuirot <chewi@gentoo.org>
  -java-sdk-docs-1.7.0.76.ebuild, -java-sdk-docs-1.8.0.40.ebuild:
  Drop vulnerable versions wrt #546678.

  17 Apr 2015; Agostino Sarubbo <ago@gentoo.org> java-sdk-docs-1.7.0.80.ebuild,
  java-sdk-docs-1.8.0.45.ebuild:
  Stable for x86, wrt bug #546678

  17 Apr 2015; Agostino Sarubbo <ago@gentoo.org> java-sdk-docs-1.7.0.80.ebuild,
  java-sdk-docs-1.8.0.45.ebuild:
  Stable for amd64, wrt bug #546678

*java-sdk-docs-1.7.0.80 (17 Apr 2015)

  17 Apr 2015; Patrice Clement <monsieurp@gentoo.org>
  +java-sdk-docs-1.7.0.80.ebuild:
  Version bump. Fix security bug 546678.

*java-sdk-docs-1.8.0.45 (15 Apr 2015)

  15 Apr 2015; James Le Cuirot <chewi@gentoo.org>
  +java-sdk-docs-1.8.0.45.ebuild:
  Version bump.

  08 Apr 2015; Agostino Sarubbo <ago@gentoo.org> java-sdk-docs-1.8.0.40.ebuild:
  Stable for x86, wrt bug #545570

  08 Apr 2015; Agostino Sarubbo <ago@gentoo.org> java-sdk-docs-1.8.0.40.ebuild:
  Stable for amd64, wrt bug #545570

*java-sdk-docs-1.8.0.40 (07 Mar 2015)

  07 Mar 2015; James Le Cuirot <chewi@gentoo.org>
  +java-sdk-docs-1.8.0.40.ebuild, -java-sdk-docs-1.8.0.31.ebuild:
  Version bump.

  30 Jan 2015; Johann Schmitz <ercpe@gentoo.org> -java-sdk-docs-1.7.0.71.ebuild,
  -java-sdk-docs-1.7.0.72.ebuild, -java-sdk-docs-1.8.0.25.ebuild:
  Removed java-sdk-docs for dropped versions (#537214)

  28 Jan 2015; Agostino Sarubbo <ago@gentoo.org> java-sdk-docs-1.7.0.76.ebuild:
  Stable for x86, wrt bug #537214

  28 Jan 2015; Agostino Sarubbo <ago@gentoo.org> java-sdk-docs-1.7.0.76.ebuild:
  Stable for amd64, wrt bug #537214

*java-sdk-docs-1.7.0.76 (23 Jan 2015)
*java-sdk-docs-1.8.0.31 (23 Jan 2015)

  23 Jan 2015; Johann Schmitz <ercpe@gentoo.org> +java-sdk-docs-1.7.0.76.ebuild,