@@ -1,32 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST jdk-1_5_0-doc-r1.zip 46191338 SHA256 accb7b36442ac5bed7a3091abedf4e29ba06e23b541f4faa1d0632a3d02053cc
 DIST jdk-6u30-apidocs.zip 59086542 SHA256 92739c56e02fa6e7ac8d60a1f59a0ef4a59ac99ab2979d3cdc495bfecf1a50ab SHA512 5139b1a65765f258f21c629a0cfbf07aed0c12b3eb08d4615b049e825abd90c5b3385af99dba3a4ac6e0a94a5ffaa32ee648fb3e7ac1815ec6b74fe0d8e9f0ee WHIRLPOOL 941236c68b189f9cd23f0e904cc01da9f87cc39967c84cddf4c20a04fa2872eb99af147a21bb770320cad28b2cd86205402a141f7217d5301fa9a6ea41c3a136
 DIST jdk-7u80-docs-all.zip 61168809 SHA256 0494bd49bc9cb3cbe3203120ae8b2c8e0aeb1579cb15c0fbd3cd780d19aa200a SHA512 c673c00e55c9a19938c42512cb9c6ae65de9803a1307d11a2043903d87cc36d9ed1f5a1e287040d8570e430cfe55f496354c1242fe6e242f1245f8271394ea1a WHIRLPOOL ad18886c401ec42735665081a0dd5ba3dc7678de0171f3aa8151c2e4ce3392e467be65c602f393da38373e589fa9800ed1afd3601d2cef4e48b06e57f491698e
 DIST jdk-8u45-docs-all.zip 92214205 SHA256 bc83053e6730779a97077cf1246e7c57e46600294357ab37675555c1c6a11cbc SHA512 b4f15bab3b7d28f78e19c72bf8266d3f53b43b8b413903a03bcd141af5adcbd3031053d532c886288048e5b887f7d712d4dc422eb5e9395d7c8fc85adcda119f WHIRLPOOL 879de168fe76531345059f5e2be9efa99105181ef928823f6b6448c60094afbab44c920034aa26c0cc81edefc4bfc01985ec68ba29403feba30cd58ec4beb18c
-EBUILD java-sdk-docs-1.5.0-r1.ebuild 1586 SHA256 e36befc28935b01a628d745f40bd342819643b6b9ea281c75fb80305783bc87e SHA512 ec4be077de6377c425f7daa334cb0520f638f0e720c98a85722af994534e96fc47333ee8b6106eea7984ab1f52f58fe8c6773752c9aee102cecb407263fba14f WHIRLPOOL 496aa76d5790c1d8f9ef6c280d26412a3f4dc03076e7f0efb494f2a82a76b915437c5bae325ece24ac0da74c79d927ad8105d2d30ba1ffd74a7674e842ec629a
 EBUILD java-sdk-docs-1.6.0.30.ebuild 1564 SHA256 389c2cd0367d619a2ea660b5b5a9c5e370c6043486470bf9c1a7127e84aa32da SHA512 bf84b5458071f61798b819ad1186ac15f623df19bf39eb33c1ab29e2e4633c53fee762396de47d03ee51e6990f4886f7a0572e7c7cf6f2ece37444687fa9a8c7 WHIRLPOOL ab8654edcb87a6ebdd91457552c404e9020fc1cfdef00c3b7c0c5d2cd4c2cc61a5b7c7cac6ea6b92c0e7a4e6cad4f3a80cd153ba9dfc52fc43b86758beca4132
 EBUILD java-sdk-docs-1.7.0.80.ebuild 1554 SHA256 5a242f9090c5d54f5c417a0f30494cf0a7a65f079b419a57799a21de35ae9a1e SHA512 071162867a27ef65244a24f0c6821a2fed9ec8674a6ed37e1169983eabfb1bae3c02e899458c796210d93a980250a0c9d16d6da150709bdbe4b03262f86e9bdb WHIRLPOOL f05d86a663cad895f4b33dc380a31f859fc5a294eea7311ac226604ba5159b515ea94fb99ed48cffd3da4697aaf255bfeef2102520d53705e111cde2c57dd131
 EBUILD java-sdk-docs-1.8.0.45.ebuild 1591 SHA256 2f6f6dc365079b45801d6074f8120d19d4494e932b0e6a1179f9883a26578456 SHA512 f46e5e7a07e5cb1c48058cfc4636475a47bbb8fc0bc91d7d50e391763d5b3e0f1fbe96f3242ab77091430789dac7e04c556e22b848d2cbb12a89375efb0ec904 WHIRLPOOL a6f9fb931eba8cde52af48ce51b1de1c724511f52002a4b93002dc19ad158b4e276ae7c5b53d948de1ffa58a7eea111a6750157bc51a581a0d7f7526100b35ca
-MISC ChangeLog 19273 SHA256 16bee8bb45f60289a9632bcf06c1567865e99e65ba4dad5a2632fff33076efb7 SHA512 b863c1bcfc806d9d8c0bbf8a49f7aea4cf9c6104e974591388c92df0d0a3c7aaea3fb2534b77f98538d81614a175799f7f3288fe6d363b10d6ffcdc4a1d6d43b WHIRLPOOL 712bb9d30da499f665f34ad4aecfb0448a01641c1315676d4b2e2fc3ea775dd60158dfd2a818d8cdbb2f8d6587e640b5ce2ec4673b0e825456dcfee1a3700177
+MISC ChangeLog 19378 SHA256 8014412c4d474a6bb474d5188e6c1d9ff41e9a928a26ce08d0078717f7cd03c6 SHA512 92ac34338da4e7758324c480ce33bf41fdbd61d3b7c142e2ac141414add366a24662d15b76f5a7a7adfc44ce4dd609b271456854021aa6825ea06c87c0c02c01 WHIRLPOOL 95714710e227f7085048f10b2afe6703567eedd6855823f014e08b41b0ec7c5eacbf45ef18d763ce68d1ec3ce20984ba59f59f6dec1a8d9855f5465cbb5c021f
 MISC metadata.xml 157 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9 SHA512 bbae663e26f48fdc5e272adc2b06c14f77f34c53caf84acb53908ff036e7c12a3edbbc0929d2db56bee861a453381d979c7e0983a23716f629ed2135c22ffece WHIRLPOOL 887e153e2481e7d76f0f1b67a395f10f0328b93930185ecdb8fcb5fe3c50f839086a18831d61cf45b34657aaffca6c3b7900cf3c04b712846a05027a84602448
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVM5t/XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1MjhERTZCRDg2OTFBNDM5MUZEQTJFRDQy
-MUM2MzIxMjlDNkQ3REU0AAoJECHGMhKcbX3kqlcQAJGzxye97g0TIxwzHGTbQ+gg
-SOJYAe7MvgqsuP9QfEn8n1t9/+b/AyYDwoSNCkMakbZYngQIhxoH+Zpklvkrso4r
-5TLRhYp4hFvsik5sUujdw0ZBX4Er1GY2Isd5KJ91ZFAShOMEw3i/dOGHPU0m8g1w
-W/RBt75fKXJaO3/4qfY+JuDdefKcOLKQ/iHYcNv9nAfJY4U50O2wlvvIdx46HUgZ
-/djoic9o6Z1WHhINI/6fVWLG6G2UOpCKu5eZPGLfCcTa6a9KCPtpmO6l8GyVPYpU
-NmnKskCG4p7HQTHEKUUU3chFpjR42s+M/iqWhHaLAwfH8QCT9l9krN1xfPKio5Y7
-f9vduPpxUCq2O9rE6AdFkfPOsKPK/i4aX5CRCTF8+1Ey+3y9LDjlHuTx8+JyTZtw
-QpqNh4bp+C+8HJ6wvmvPsA3HL+xXc3893CTZuMVpt80qNsKNJP/6uLoZqfgq5m9S
-4UKouFZSIThlv3fryNR92ZziVaIwId4al8XkkmMbJWMhZh9G1Z5rkIpT389MfrQ/
-gfP9asQJcVn3OHIp+APaCPqLu2uo/x7stM0BojtiOmNXBTk6yVX35lcaBqX62cUq
-WfCbpr0Qt7MKUckWQ8RG/tIP/YPoPyWpSFO3//nbLECaWOMQeRAbMhohTrbRgdeQ
-cyAsrQboVBIlk0HDVSDq
-=udv7
+iQEcBAEBCAAGBQJVfiuNAAoJEJGRpfGTSRu4fWYH/iUjwXglCRBMgncF+kYtHM10
+d49vHxYBDNu7sFFHSv913uzCKg7KwnBpDamztE4elrnJoMtvQTIhJgYCf47w5dwA
+wdZWTALykrGSB6kaKw1Q9NpdRWHDbWykQsOggq9MBZlWQ7BMknwV7oskbJw8GwLc
+7cOtcYjl0vMVf4F2F4h4hwGxX+GCFQ/D2t9qY0+HG4KPUeaJouYpPSpx9+IisOaa
+jRQmqbxNLLwYqOXEj5J2dUNHfD0j0kP7DxmBtsncA7SMZIukYg1w27D9wdigLQ7n
+1VhQzfpl7Y1ojgTJuqs52YrHtl8Yxw/8LEr2nsxZQGGgKD4Dz6GplMSZ71PUlXc=
+=nSCV
 -----END PGP SIGNATURE-----
