@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/java-sdk-docs
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/java-sdk-docs/ChangeLog,v 1.126 2015/04/19 12:11:42 chewi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/java-sdk-docs/ChangeLog,v 1.127 2015/06/15 00:32:10 monsieurp Exp $
+
+  15 Jun 2015; Patrice Clement <monsieurp@gentoo.org>
+  -java-sdk-docs-1.5.0-r1.ebuild:
+  Drop old.
 
   19 Apr 2015; James Le Cuirot <chewi@gentoo.org>
   -java-sdk-docs-1.7.0.76.ebuild, -java-sdk-docs-1.8.0.40.ebuild:
